2007-06-14 Erik Hjortsberg  <erik.hjortsberg@iteam.se> 

	* configure.ac: updated requirements

2007-06-14 Erik Hjortsberg  <erik.hjortsberg@iteam.se> 

	* src/components/ogre/scripting/bindings/lua/EntityEditor.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp, src/components/ogre/scripting/bindings/lua/required.h: updated bindings

2007-06-14 Erik Hjortsberg  <erik.hjortsberg@iteam.se> 

	* src/components/ogre/widgets/adapters/atlas/bindings/lua/AdapterFactory.pkg, src/components/ogre/widgets/adapters/atlas/bindings/lua/Position2DAdapter.pkg, src/components/ogre/widgets/adapters/atlas/bindings/lua/SizeAdapter.pkg, src/components/ogre/widgets/adapters/atlas/bindings/lua/bindings.cpp, src/components/ogre/widgets/adapters/atlas/bindings/lua/bindings.pkg: updated bindings

2007-06-14 Erik Hjortsberg  <erik.hjortsberg@iteam.se> 

	* src/components/ogre/widgets/EntityPicker.lua: disable the check that we're really admin for now

2007-06-14 Erik Hjortsberg  <erik.hjortsberg@iteam.se> 

	* src/components/ogre/Makefile.am: removed image lib (though perhaps we should keep it and check if ogre is compiled with devil or not?)

2007-06-14 Erik Hjortsberg  <erik.hjortsberg@iteam.se> 

	* src/components/ogre/widgets/adapters/atlas/AdapterFactory.cpp, src/components/ogre/widgets/adapters/atlas/AdapterFactory.h, src/components/ogre/widgets/EntityEditor.cpp, src/components/ogre/widgets/EntityEditor.h, src/components/ogre/widgets/EntityEditor.lua: added support for 2d points in areas
	
2007-06-14 Erik Hjortsberg  <erik.hjortsberg@iteam.se> 

	* src/components/ogre/widgets/adapters/atlas/ListAdapterNewElement.layout: default to read only

2007-06-14 Erik Hjortsberg  <erik.hjortsberg@iteam.se> 

	* src/components/ogre/widgets/adapters/atlas/Position2DAdapter.cpp, src/components/ogre/widgets/adapters/atlas/Position2DAdapter.h, src/components/ogre/widgets/adapters/atlas/Position2DAdapter.layout: added a 2d position adapter
